kubernetes/tests/local-k3d/infrastructure/01-assert-cert-manager.yaml
# Assert cert-manager components are healthy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cert-manager
  namespace: cert-manager
status:
  (readyReplicas >= `1`): true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cert-manager-cainjector
  namespace: cert-manager
status:
  (readyReplicas >= `1`): true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cert-manager-webhook
  namespace: cert-manager
status:
  (readyReplicas >= `1`): true
