kubernetes/tests/local-k3d/infrastructure/01-assert-step-ca.yaml
# Assert step-ca internal PKI StatefulSet is healthy
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: step-ca-step-certificates
  namespace: step-ca
status:
  (readyReplicas >= `1`): true
