kubernetes/tests/local-k3d/infrastructure/02-assert-httproute.yaml
# Assert ArgoCD HTTPRoute is accepted by Gateway
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
status:
  (length(parents[?conditions[?type=='Accepted' && status=='True']]) > `0`): true
